--- a/style/_main.scss
+++ b/style/_main.scss
@@ -60,8 +60,13 @@ form{
     line-height: 50px;
     transition: .3s;
     width: 551px;
+    font-family: $font-roboto;
+    font-weight: 400;
+    color: $black-font-color;
+    margin-left: 10px;
     
 }
+
 #list-auto{
     display: flex;
     align-items: flex-start;
@@ -167,15 +172,16 @@ form{
 }
 
 //Style list autocompleted
-.autoList:hover{
-    background-color: #f1f1f1;
-}
+
 .autoList{
     list-style: none;
     display: block;
     height: 20px;
     padding-left: 10px;
     width: 100%;
+    font-family: $font-roboto;
+    font-size: 16px;
+    color: $second-night-font-color;
 }
 
 .autocomplete{
@@ -244,9 +250,9 @@ form{
     left: 0;
     top: 0;
     width: 100%; 
-    height: 80%; 
+    height: 100%; 
     overflow: auto; 
-    background-color: red; 
+    background-color: $background-color; 
 }
 
 .mySlidesModal{
@@ -256,23 +262,23 @@ form{
 
 //Modal Content/Box
 .modal-container {
-    background-color: #fefefe;
+    background-color: $background-color;
     border: none;
-    //width:80%; /* Could be more or less, depending on screen size */
 }
 
 .close {
-    color: greenyellow;
-    display: flex;
-    justify-content: flex-end;
+    color: $purple-color;
+    display: block;
+    float: right;
     margin-right: 5%;
-    font-size: 50px;
+    font-size: 30px;
+    margin-top: 100px;
     font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: gray;
   text-decoration: none;
   cursor: pointer;
 }
@@ -281,12 +287,11 @@ form{
 .prev2, .next2 {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 400px;
     margin-top: -30px;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 5px;
-    padding-top: 5px;
     width: 8px;
     color: $purple-color;
     border-style: solid;
@@ -310,8 +315,8 @@ form{
 .arrowsModal {
     display: flex;
     justify-content: space-around;
-    margin-left: 22%;
-    margin-right: 22%;
+    margin-left: 15%;
+    margin-right: 21%;
 }
 #titleModal{
     font-size: 15px;
@@ -337,11 +342,15 @@ form{
 }
 .modal-icon-layer{
     display: flex;
-    padding-top: 23%;
+    padding-top: 542px;
     justify-content: space-between;
     margin-left: -5%;
 }
 
+.imgSize{
+    width: 695px; 
+    height: 385px; 
+}
 //Responsive//
 @media only screen and (max-width: 615px) {
     
@@ -390,4 +399,21 @@ form{
     .img-layer{
         display: none;
     }
+
+    //MODAL
+    #titleModal {
+        margin-left: 8%;
+        width: 270px;
+    }
+    .modal-icon-layer{
+        padding-top: 395px;
+        margin-left:-12%;
+    }
+    .close {
+        margin-right: 5%;
+        font-size: 30px;
+        margin-top: 100px;
+    }
+
+   
 }
