--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -20,7 +20,7 @@
     margin-top: 4%;
 }
 .trending__header{
-    margin-top: 80px;
+    margin-top: 38px;
 }
 #title__trending{
     color: $purple-color;
@@ -159,7 +159,21 @@
     font-weight: bold;
     display: block;
 }
+.imgSize{
+    width: 695px; 
+    height: 385px; 
+    margin-top: 200px;
+
+}
+
 @media only screen and (max-width: 615px) {
+    .imgSize{
+        margin-top: 200px;
+        margin-left: 8%;
+        width: 318px; 
+        height: 245px;
+    }
+    
     .trending{
         background-color:#F3F5F8;
         height: 430px;
@@ -175,8 +189,17 @@
         max-width:375px;
         overflow: hidden; 
     }
-    .styleCard{
+   .styleCard{
         width: 243px;
         height: 187px;
     }
+    .modal{
+        width: 100%;
+        height: 100%;
+    }
+    .modal-container{
+        width: 100%;
+        height: 100%;
+    }
+
 }
