--- a/style/create_gifo.css
+++ b/style/create_gifo.css
@@ -299,6 +299,10 @@ form {
   line-height: 50px;
   transition: .3s;
   width: 551px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: black;
+  margin-left: 10px;
 }
 
 #list-auto {
@@ -409,16 +413,15 @@ form {
   display: block;
 }
 
-.autoList:hover {
-  background-color: #f1f1f1;
-}
-
 .autoList {
   list-style: none;
   display: block;
   height: 20px;
   padding-left: 10px;
   width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #9CAFC3;
 }
 
 .autocomplete {
@@ -483,9 +486,9 @@ form {
   left: 0;
   top: 0;
   width: 100%;
-  height: 80%;
+  height: 100%;
   overflow: auto;
-  background-color: red;
+  background-color: #FFFFFFFF;
 }
 
 .mySlidesModal {
@@ -494,22 +497,23 @@ form {
 }
 
 .modal-container {
-  background-color: #fefefe;
+  background-color: #FFFFFFFF;
   border: none;
 }
 
 .close {
-  color: greenyellow;
-  display: flex;
-  justify-content: flex-end;
+  color: #572EE5;
+  display: block;
+  float: right;
   margin-right: 5%;
-  font-size: 50px;
+  font-size: 30px;
+  margin-top: 100px;
   font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: gray;
   text-decoration: none;
   cursor: pointer;
 }
@@ -517,12 +521,11 @@ form {
 .prev2, .next2 {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 400px;
   margin-top: -30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 5px;
-  padding-top: 5px;
   width: 8px;
   color: #572EE5;
   border-style: solid;
@@ -545,8 +548,8 @@ form {
 .arrowsModal {
   display: flex;
   justify-content: space-around;
-  margin-left: 22%;
-  margin-right: 22%;
+  margin-left: 15%;
+  margin-right: 21%;
 }
 
 #titleModal {
@@ -576,9 +579,14 @@ form {
 
 .modal-icon-layer {
   display: flex;
-  padding-top: 23%;
+  padding-top: 542px;
   justify-content: space-between;
   margin-left: -5%;
+}
+
+.imgSize {
+  width: 695px;
+  height: 385px;
 }
 
 @media only screen and (max-width: 615px) {
@@ -627,6 +635,19 @@ form {
   .img-layer {
     display: none;
   }
+  #titleModal {
+    margin-left: 8%;
+    width: 270px;
+  }
+  .modal-icon-layer {
+    padding-top: 395px;
+    margin-left: -12%;
+  }
+  .close {
+    margin-right: 5%;
+    font-size: 30px;
+    margin-top: 100px;
+  }
 }
 
 .trending {
@@ -652,7 +673,7 @@ form {
 }
 
 .trending__header {
-  margin-top: 80px;
+  margin-top: 38px;
 }
 
 #title__trending {
@@ -795,7 +816,19 @@ form {
   display: block;
 }
 
+.imgSize {
+  width: 695px;
+  height: 385px;
+  margin-top: 200px;
+}
+
 @media only screen and (max-width: 615px) {
+  .imgSize {
+    margin-top: 200px;
+    margin-left: 8%;
+    width: 318px;
+    height: 245px;
+  }
   .trending {
     background-color: #F3F5F8;
     height: 430px;
@@ -814,6 +847,14 @@ form {
   .styleCard {
     width: 243px;
     height: 187px;
+  }
+  .modal {
+    width: 100%;
+    height: 100%;
+  }
+  .modal-container {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -874,6 +915,9 @@ form {
   }
   #icons {
     justify-content: center;
+  }
+  #icons :hover {
+    color: none;
   }
   .copyright {
     margin: 0;
