--- a/style/nightmode.css
+++ b/style/nightmode.css
@@ -51,6 +51,18 @@ h5 {
   display: none;
 }
 
+@media only screen and (max-width: 615px) {
+  h1 {
+    font-size: 25px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  h4 {
+    font-size: 14px;
+  }
+}
+
 .blue-line {
   display: flex;
   align-items: center;
@@ -285,6 +297,10 @@ form {
   line-height: 50px;
   transition: .3s;
   width: 551px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: #9CAFC3;
+  margin-left: 5px;
 }
 
 #list-auto {
@@ -395,6 +411,26 @@ form {
   display: block;
 }
 
+.autoList {
+  list-style: none;
+  display: block;
+  height: 20px;
+  padding-left: 10px;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #9CAFC3;
+}
+
+.autocomplete {
+  width: 551px;
+  border-radius: 50px;
+  border: 1px solid #FFFFFFFF;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  padding: 10px;
+}
+
 .user-trend {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -410,16 +446,6 @@ form {
   font-size: 16px;
   font-weight: bold;
   display: block;
-}
-
-.autoList {
-  list-style: none;
-  display: block;
-}
-
-.autocomplete {
-  margin-top: -72px;
-  margin-left: -445px;
 }
 
 .gray-line {
@@ -476,9 +502,9 @@ form {
   left: 0;
   top: 0;
   width: 100%;
-  height: 80%;
+  height: 100%;
   overflow: auto;
-  background-color: red;
+  background-color: black;
 }
 
 .mySlidesModal {
@@ -487,22 +513,23 @@ form {
 }
 
 .modal-container {
-  background-color: #fefefe;
+  background-color: black;
   border: none;
 }
 
 .close {
-  color: greenyellow;
-  display: flex;
-  justify-content: flex-end;
+  color: #FFFFFFFF;
+  display: block;
+  float: right;
   margin-right: 5%;
-  font-size: 50px;
+  font-size: 30px;
+  margin-top: 100px;
   font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: #572EE5;
   text-decoration: none;
   cursor: pointer;
 }
@@ -538,13 +565,13 @@ form {
 .arrowsModal {
   display: flex;
   justify-content: space-around;
-  margin-left: 22%;
-  margin-right: 22%;
+  margin-left: 15%;
+  margin-right: 21%;
 }
 
 #titleModal {
   font-size: 15px;
-  color: black;
+  color: #FFFFFFFF;
   font-weight: 400;
 }
 
@@ -569,9 +596,14 @@ form {
 
 .modal-icon-layer {
   display: flex;
-  padding-top: 23%;
+  padding-top: 542px;
   justify-content: space-between;
   margin-left: -5%;
+}
+
+.imgSize {
+  width: 695px;
+  height: 385px;
 }
 
 @media only screen and (max-width: 615px) {
@@ -620,6 +652,19 @@ form {
   .img-layer {
     display: none;
   }
+  #titleModal {
+    margin-left: 8%;
+    width: 270px;
+  }
+  .modal-icon-layer {
+    padding-top: 395px;
+    margin-left: -12%;
+  }
+  .close {
+    margin-right: 5%;
+    font-size: 30px;
+    margin-top: 100px;
+  }
 }
 
 .trending {
@@ -645,7 +690,7 @@ form {
 }
 
 .trending__header {
-  margin-top: 80px;
+  margin-top: 38px;
 }
 
 #title__trending {
@@ -771,7 +816,36 @@ form {
   margin-right: -5%;
 }
 
+.user-trend {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: #FFFFFFFF;
+  display: block;
+  margin-left: 5px;
+  margin-top: 50%;
+  width: 240px;
+}
+
+.titleGtrend {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
+}
+
+.imgSize {
+  width: 695px;
+  height: 385px;
+  margin-top: 200px;
+}
+
 @media only screen and (max-width: 615px) {
+  .imgSize {
+    margin-top: 200px;
+    margin-left: 8%;
+    width: 318px;
+    height: 245px;
+  }
   .trending {
     background-color: #222326;
     height: 430px;
@@ -790,6 +864,14 @@ form {
   .styleCard {
     width: 243px;
     height: 187px;
+  }
+  .modal {
+    width: 100%;
+    height: 100%;
+  }
+  .modal-container {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -876,6 +958,23 @@ form {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+}
+
+.user-title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: #FFFFFFFF;
+  display: block;
+  margin-left: 5px;
+  margin-top: 20%;
+  width: 200px;
+}
+
+.titleG {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
 }
 
 @media only screen and (max-width: 615px) {
@@ -1261,6 +1360,9 @@ video {
   }
   #icons {
     justify-content: center;
+  }
+  #icons :hover {
+    color: none;
   }
   .copyright {
     margin: 0;
