--- a/style/nightmode.scss
+++ b/style/nightmode.scss
@@ -59,6 +59,18 @@ h5{
     display: none;
 }
 
+@media only screen and (max-width: 615px) {
+    
+    h1 {
+        font-size: 25px;
+    }
+    h2{
+        font-size: 20px;
+    }
+    h4{
+        font-size: 14px;
+    }
+}
 
 ////NAV BAR
 
@@ -296,6 +308,10 @@ form{
     line-height: 50px;
     transition: .3s;
     width: 551px;
+    font-family: $font-roboto;
+    font-weight: 400;
+    color: $second-night-font-color;
+    margin-left: 5px;
     
 }
 #list-auto{
@@ -401,6 +417,30 @@ form{
     font-weight: bold;
     display: block;
 }
+
+//Style list autocompleted
+
+.autoList{
+    list-style: none;
+    display: block;
+    height: 20px;
+    padding-left: 10px;
+    width: 100%;
+    font-family: $font-roboto;
+    font-size: 16px;
+    color: $second-night-font-color;
+}
+
+.autocomplete{
+    width: 551px;
+    border-radius: 50px;
+    border: 1px solid $background-color;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    padding: 10px;
+}
+
+//User and totle in layer
 .user-trend{
     font-family: $font-roboto;
     font-weight: 400;
@@ -417,16 +457,6 @@ form{
     display: block;
 }
 
-
-//Style list autocompleted
-.autoList{
-    list-style: none;
-    display: block;
-}
-.autocomplete{
-    margin-top: -72px;
-    margin-left: -445px;
-}
 
 //Line results
 .gray-line{
@@ -480,15 +510,15 @@ form{
 
 
 .modal {
-    display: none; 
+    display: none;
     position: fixed; 
     z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%;
-    height: 80%; 
+    width: 100%; 
+    height: 100%; 
     overflow: auto; 
-    background-color: red; 
+    background-color: $black-font-color; 
 }
 .mySlidesModal{
     display: flex;
@@ -497,23 +527,23 @@ form{
 
 //Modal Content/Box
 .modal-container {
-    background-color: #fefefe;
+    background-color: $black-font-color;
     border: none;
-    //width:80%; /* Could be more or less, depending on screen size */
 }
 
 .close {
-    color: greenyellow;
-    display: flex;
-    justify-content: flex-end;
+    color: $background-color;
+    display: block;
+    float: right;
     margin-right: 5%;
-    font-size: 50px;
+    font-size: 30px;
+    margin-top: 100px;
     font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: $purple-color;
   text-decoration: none;
   cursor: pointer;
 }
@@ -549,12 +579,12 @@ form{
 .arrowsModal {
     display: flex;
     justify-content: space-around;
-    margin-left: 22%;
-    margin-right: 22%;
+    margin-left: 15%;
+    margin-right: 21%;
 }
 #titleModal{
     font-size: 15px;
-    color: $black-font-color;
+    color: $background-color;
     font-weight: 400;
 }
 #userModal{
@@ -577,11 +607,14 @@ form{
 
 .modal-icon-layer{
     display: flex;
-    padding-top: 23%;
+    padding-top: 542px;
     justify-content: space-between;
     margin-left: -5%;
 }
-
+.imgSize{
+    width: 695px; 
+    height: 385px; 
+}
 //Responsive MAIN//
 @media only screen and (max-width: 615px) {
     
@@ -630,6 +663,20 @@ form{
     .img-layer{
         display: none;
     }
+    //MODAL
+    #titleModal {
+        margin-left: 8%;
+        width: 270px;
+    }
+    .modal-icon-layer{
+        padding-top: 395px;
+        margin-left:-12%;
+    }
+    .close {
+        margin-right: 5%;
+        font-size: 30px;
+        margin-top: 100px;
+    }
 }
 
 ////TRENDING
@@ -656,7 +703,7 @@ form{
     margin-top: 4%;
 }
 .trending__header{
-    margin-top: 80px;
+    margin-top: 38px;
 }
 #title__trending {
     color: $background-color;
@@ -780,8 +827,36 @@ form{
     margin-left: -5%;
     margin-right: -5%;
 }
+.user-trend{
+    font-family: $font-roboto;
+    font-weight: 400;
+    font-size: 15px;
+    color: $background-color;
+    display: block;
+    margin-left: 5px;
+    margin-top:50%;
+    width: 240px;
+}
+.titleGtrend{
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+}
+.imgSize{
+    width: 695px; 
+    height: 385px; 
+    margin-top: 200px;
+
+}
 
 @media only screen and (max-width: 615px) {
+    .imgSize{
+        margin-top: 200px;
+        margin-left: 8%;
+        width: 318px; 
+        height: 245px;
+    }
+    
     .trending{
         background-color:#222326;
         height: 430px;
@@ -801,6 +876,15 @@ form{
         width: 243px;
         height: 187px;
     }
+    .modal{
+        width: 100%;
+        height: 100%;
+    }
+    .modal-container{
+        width: 100%;
+        height: 100%;
+    }
+
 }
 
 ///////FAVORITES
@@ -883,6 +967,21 @@ form{
     font: inherit;
     cursor: pointer;
     outline: inherit;
+}
+.user-title{
+    font-family: $font-roboto;
+    font-weight: 400;
+    font-size: 15px;
+    color: $background-color;
+    display: block;
+    margin-left: 5px;
+    margin-top: 20%;
+    width: 200px;
+}
+.titleG{
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
 }
 
 @media only screen and (max-width: 615px) {
@@ -1257,6 +1356,9 @@ video{
     }
     #icons{
       justify-content: center;
+      :hover{
+        color: none;
+      }
     }
     .copyright{
       margin: 0;
