--- a/style/_main.scss
+++ b/style/_main.scss
@@ -103,6 +103,7 @@ form{
     text-align: center;
     line-height: 30px;
     margin-top: 80px;
+    margin-bottom: 94px;
     text-transform: capitalize;
 }
 
