--- a/style/create_gifo.css
+++ b/style/create_gifo.css
@@ -340,6 +340,7 @@ form {
   text-align: center;
   line-height: 30px;
   margin-top: 80px;
+  margin-bottom: 94px;
   text-transform: capitalize;
 }
 
